src/ds/scheme/read/y.output

state 0
	$accept: .datum $end 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 1
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 1
	$accept:  datum.$end 

	$end  accept
	.  error


state 2
	datum:  simpledatum.    (1)

	.  reduce 1 (src line 83)


state 3
	datum:  compounddatum.    (2)

	.  reduce 2 (src line 89)


state 4
	datum:  comment.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 28
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 5
	simpledatum:  BOOL.    (6)

	.  reduce 6 (src line 136)


state 6
	simpledatum:  NUMBER.    (7)

	.  reduce 7 (src line 141)


state 7
	simpledatum:  CHAR.    (8)

	.  reduce 8 (src line 145)


state 8
	simpledatum:  STRING.    (9)

	.  reduce 9 (src line 149)


state 9
	simpledatum:  symbol.    (10)

	.  reduce 10 (src line 153)


state 10
	simpledatum:  u8vector.    (11)

	.  reduce 11 (src line 157)


state 11
	compounddatum:  list.    (12)

	.  reduce 12 (src line 162)


state 12
	compounddatum:  vector.    (13)

	.  reduce 13 (src line 167)


state 13
	comment:  COMMENT.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 29
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 14
	symbol:  ID.    (5)

	.  reduce 5 (src line 130)


state 15
	u8vector:  U8VECTORPAREN.datums0 ) 
	datums0: .    (25)

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  reduce 25 (src line 226)

	datum  goto 32
	datums1  goto 31
	datums0  goto 30
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 16
	list:  (.datums0 ) 
	list:  (.datums2 ) 
	datums0: .    (25)

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  reduce 25 (src line 226)

	datum  goto 32
	datums2  goto 34
	datums1  goto 35
	datums0  goto 33
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 17
	list:  [.datums0 ] 
	list:  [.datums2 ] 
	datums0: .    (25)

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  reduce 25 (src line 226)

	datum  goto 32
	datums2  goto 37
	datums1  goto 35
	datums0  goto 36
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 18
	list:  abbreviation.    (18)

	.  reduce 18 (src line 189)


state 19
	vector:  VECTORPAREN.datums0 ) 
	datums0: .    (25)

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  reduce 25 (src line 226)

	datum  goto 32
	datums1  goto 31
	datums0  goto 38
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 20
	abbreviation:  QUOTE.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 39
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 21
	abbreviation:  QQUOTE.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 40
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 22
	abbreviation:  UNQUOTE.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 41
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 23
	abbreviation:  UNQUOTES.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 42
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 24
	abbreviation:  SYNTAX.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 43
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 25
	abbreviation:  QSYNTAX.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 44
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 26
	abbreviation:  UNSYNTAX.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 45
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 27
	abbreviation:  UNSYNTAXS.datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 46
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 28
	datum:  comment datum.    (3)

	.  reduce 3 (src line 104)


state 29
	comment:  COMMENT datum.    (4)

	.  reduce 4 (src line 125)


state 30
	u8vector:  U8VECTORPAREN datums0.) 

	)  shift 47
	.  error


state 31
	datums0:  datums1.    (24)

	.  reduce 24 (src line 221)


state 32
	datums1:  datum.    (21)
	datums1:  datum.datums1 
	datums1:  datum.comment 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  reduce 21 (src line 207)

	datum  goto 32
	datums1  goto 48
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 49

state 33
	list:  ( datums0.) 

	)  shift 50
	.  error


state 34
	list:  ( datums2.) 

	)  shift 51
	.  error


state 35
	datums2:  datums1.. datum 
	datums2:  datums1.. datum . datum 
	datums0:  datums1.    (24)

	.  shift 52
	.  reduce 24 (src line 221)


state 36
	list:  [ datums0.] 

	]  shift 53
	.  error


state 37
	list:  [ datums2.] 

	]  shift 54
	.  error


state 38
	vector:  VECTORPAREN datums0.) 

	)  shift 55
	.  error


state 39
	abbreviation:  QUOTE datum.    (26)

	.  reduce 26 (src line 231)


state 40
	abbreviation:  QQUOTE datum.    (27)

	.  reduce 27 (src line 236)


state 41
	abbreviation:  UNQUOTE datum.    (28)

	.  reduce 28 (src line 240)


state 42
	abbreviation:  UNQUOTES datum.    (29)

	.  reduce 29 (src line 244)


state 43
	abbreviation:  SYNTAX datum.    (30)

	.  reduce 30 (src line 248)


state 44
	abbreviation:  QSYNTAX datum.    (31)

	.  reduce 31 (src line 252)


state 45
	abbreviation:  UNSYNTAX datum.    (32)

	.  reduce 32 (src line 256)


state 46
	abbreviation:  UNSYNTAXS datum.    (33)

	.  reduce 33 (src line 260)


state 47
	u8vector:  U8VECTORPAREN datums0 ).    (35)

	.  reduce 35 (src line 271)


state 48
	datums1:  datum datums1.    (22)

	.  reduce 22 (src line 212)


state 49
	datum:  comment.datum 
	datums1:  datum comment.    (23)

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  reduce 23 (src line 216)

	datum  goto 28
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 50
	list:  ( datums0 ).    (14)

	.  reduce 14 (src line 172)


state 51
	list:  ( datums2 ).    (16)

	.  reduce 16 (src line 181)


state 52
	datums2:  datums1 ..datum 
	datums2:  datums1 ..datum . datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 56
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 53
	list:  [ datums0 ].    (15)

	.  reduce 15 (src line 177)


state 54
	list:  [ datums2 ].    (17)

	.  reduce 17 (src line 185)


state 55
	vector:  VECTORPAREN datums0 ).    (34)

	.  reduce 34 (src line 265)


state 56
	datums2:  datums1 . datum.    (19)
	datums2:  datums1 . datum.. datum 

	.  shift 57
	.  reduce 19 (src line 194)


state 57
	datums2:  datums1 . datum ..datum 

	ID  shift 14
	BOOL  shift 5
	NUMBER  shift 6
	CHAR  shift 7
	STRING  shift 8
	VECTORPAREN  shift 19
	U8VECTORPAREN  shift 15
	QUOTE  shift 20
	QQUOTE  shift 21
	UNQUOTE  shift 22
	UNQUOTES  shift 23
	SYNTAX  shift 24
	QSYNTAX  shift 25
	UNSYNTAX  shift 26
	UNSYNTAXS  shift 27
	COMMENT  shift 13
	(  shift 16
	[  shift 17
	.  error

	datum  goto 58
	simpledatum  goto 2
	compounddatum  goto 3
	symbol  goto 9
	list  goto 11
	vector  goto 12
	u8vector  goto 10
	abbreviation  goto 18
	comment  goto 4

state 58
	datums2:  datums1 . datum . datum.    (20)

	.  reduce 20 (src line 199)


25 terminals, 13 nonterminals
36 grammar rules, 59/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 215/30000
28 extra closures
350 shift entries, 1 exceptions
34 goto entries
148 entries saved by goto default
Optimizer space used: output 78/30000
78 table entries, 18 zero
maximum spread: 25, maximum offset: 57
